--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The LeitSpeed App back end. Built with Node and Express.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "server": "nodemon index.js", 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/ashley-bergsma/leitspeed_api#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.13",
+    "knex-cleaner": "^1.3.1",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
