Updates docs for PUT endpoint
Updates the readme with use cases for the new update endpoint, finishes the testing suite for the ADD functionality of the cards model. Still need to test the UPDATE function.

## Types of changes
<!--- What types of changes does your code introduce? Put an `x` in all the boxes that apply: -->

- Trello card: (link)[here]

- [ ] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing functionality to change)
- [x] My code follows the code style of this project.
- [ ] My change requires a change to the documentation.
- [x] I have updated the documentation accordingly.
- [x] I have added tests to cover my changes.
- [x] All new and existing tests passed.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The LeitSpeed App back end. Built with Node and Express.",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env DB_ENV=testing jest --watch --verbose --detectOpenHandles",
+    "test": "cross-env DB_ENV=testing jest --watch --verbose",
     "server": "nodemon index.js",
     "start": "node index.js"
   },
