--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
   "homepage": "https://github.com/ashley-bergsma/leitspeed_api#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "hbs": "^4.1.1",
     "knex": "^0.21.13",
     "knex-cleaner": "^1.3.1",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "sqlite3": "^5.0.0"
