--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"express": "^4.17.1",
 		"express-flash": "0.0.2",
 		"express-session": "^1.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"knex": "^0.21.13",
 		"knex-cleaner": "^1.3.1",
 		"passport": "^0.4.1",
